# chargerroad

./: .gitignore  Cargo.toml  LICENSE  courses.json  docker-compose.yml
api/: Cargo.toml
api/src/: lib.rs  main.rs
data/: postmaster.pid
data/base/1/: 2619  pg_internal.init
data/base/16384/: 2619
data/base/5/: pg_internal.init
data/global/: 1260  1262  2671  pg_control  pg_internal.init
scraper/: Cargo.toml
scraper/src/: courses.json  lib.rs  main.rs
site/: Cargo.toml  index.html
site/src/: lib.rs  main.rs
site/src/components/: courses.rs  road.rs
site/src/styles/: courses.css  road.css  style.css
src/: lib.rs  main.rs
src/components/: courses.rs  mod.rs
