[package]
name = "chargerroad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
serde = "1.0.183"
stylist = { version = "0.12.1", features = ["yew", "yew_integration", "parser"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
yew = { version = "0.20.0", features = ["csr"] }
